style.css
  .imageContainer {
    width: 900px;
    height: 600px;
    position: absolute;
    overflow: hidden;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    background: #2b2b2c;
  }
  
  
  
  
  #hud {
    background: rgba(0,0,0,0.6);
    position: absolute;
    padding: 10px 20px;
    color: #FFF;
    font-family: sans-serif;
    font-size: 1.2em;
    pointer-events: none;
  }

  html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}
body {
    margin: 0;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.container {
    position: relative;
    width: 900px;
    height: 600px;
    border: 2px solid white;
    display: flex;
    justify-content: center;
}
.container .img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: 900px 100%;
}
#background-img {
    background-image: url('after.jpeg');
}
#foreground-img {
    background-image: url('before.jpeg');
    width: 50%;
}
.container .slider {
    position: absolute;
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    height: 100%;
    background: rgba(242, 242, 242, .3);
    outline: none;
    margin: 0;
    transition: all 0.2s;
    display: flex;
    justify-content: center;
    align-items: center;
}
.container .slider:hover {
    background: rgba(242, 242, 242, .1);
}
.container .slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 6px;
    height: 600px;
    background: white;
    cursor: pointer;
}
.container .slider::-moz-range-thumb {
    width: 6px;
    height: 600px;
    background: white;
    cursor: pointer;
}
.container .slider-button  {
    position: absolute;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background-color: rgba(255, 255, 255, 0);
    left: calc(50% - 18px);
    top: calc(50% - 18px);
    display: flex;
    justify-content: center;
    align-items: center;
}
.container .slider-button:after {
    content: '';
    padding: 3px;
    display: inline-block;
    border: solid #f8f8f8;
    border-width: 0 2px 2px 0;
    transform: rotate(-45deg);
    margin-left: 2em;
}
.container .slider-button:before {
    content: '';
    padding: 3px;
    display: inline-block;
    border: solid #ffffff;
    border-width: 0 2px 2px 0;
    transform: rotate(135deg);
}
.slider{
}
#slider-wrapper{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  z-index: 1000;
}

